--- a/projects/angular-notifier-demo/src/index.html
+++ b/projects/angular-notifier-demo/src/index.html
@@ -1,21 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>"angular-notifier" demo</title>
+    <base href="/" />
 
-	<head>
-		<meta charset="utf-8">
-		<title>"angular-notifier" demo</title>
-		<base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
+  </head>
 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-	</head>
-
-	<body>
-		<app>
-			Loading demo for "angular-notifier" ...
-		</app>
-	</body>
-
+  <body>
+    <app> Loading demo for "angular-notifier" ... </app>
+  </body>
 </html>
